istio/traffic-split/user-data-service-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-data-service
spec:
  hosts:
    - user-data-service.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: user-data-service.default.svc.cluster.local
            subset: v1
