istio/traffic-split/user-data-service-v2-debug.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-data-service
spec:
  hosts:
    - user-data-service
  http:
    - match:
        - headers:
            user-agent:
              exact: "debug"  # Match the exact value "v2" of the header "my-custom-header"
      route:
        - destination:
            host: user-data-service
            subset: v2  # Route to the v2 subset of user-data-service
    - route:
        - destination:
            host: user-data-service
            subset: v1  # Default route to the v1 subset if the header is not set or doesn't match
